# Jotalovatics-War

./: Cargo.toml
.cargo/: config.toml
src/: assets.rs  camera.rs  main.rs  player.rs  scenery.rs  warrior.rs
src/warrior/: attack.rs  hitbox.rs  sprites.rs  states.rs  stats.rs
