[package]
name = "jotalovatics_war"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3", features = [
    "dynamic_linking", # remove this feature when compiling to release
    "wav",
    "jpeg",
] }
bevy-inspector-egui = "0.20.0"
bevy-inspector-egui-rapier = { version = "0.9.0", features = [
    "rapier2d",
] } # ver de arrumar ou tirar
bevy_asset_loader = { version = "0.17.0", features = ["2d"] }
# bevy_egui = "0.20.0"
bevy_mod_picking = { version = "0.15.0" }
bevy_rapier2d = { version = "0.22.0", features = [
    "simd-stable",
    "debug-render-2d",
    "parallel",
] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
